--- a/style.css
+++ b/style.css
@@ -73,30 +73,33 @@
 }
 
 .top_info {
-	display: flex;
+/*	display: flex;
 	flex-direction: row;
-	width: 100%;
+*/
+	display: flex;
+	flex-wrap: wrap;
+	align-content: center;
+	justify-content: space-between;
+	top: 100px;
+	position: relative;
 }
 
 .vid1 {
-	top: 100px;
 	position: relative;
-	left: 30px;
-	text-align: center;
-	width: 900px;
+	left: 2%;
+	width: 60%;
 	height: 480px;
 	background: #00274c;
 	border-radius: 20px;
+	text-align: center;
 }
 
 .information{
 	font-family: 'Poppins', sans-serif;
 	color: #00274c;
-	left: 60px;
-	top: 100px;
-	width: 450px;
-	position: relative;
-	background: green;
+	/*left: 3%;*/
+	width: 35%;
+	margin-right: 20px;
 	text-align: justify;
 }
 
