--- a/style.css
+++ b/style.css
@@ -115,6 +115,9 @@
 
 /*mobile version*/
 @media (max-width: 947px){
+	.top_info {
+		top: 110px;
+	}
 	.vid1 {
 		flex: 100%;
 		width: 90%;
@@ -125,7 +128,6 @@
 		flex: 100%;
 		font-size: 17px;
 	}
-
 }
 
 
